# data-pipeline

./: .gitignore  CodexL2Prep.py  CodexPipeline.py  README.md  pyproject.toml
AttitutePackage/SpiceKernels/spk/: earthnpole_19500101_20251231_v01.bsp
Examples/Pointing/: codex_boresite.ipynb
Notebooks/: codex_data_scraper.ipynb
attitute_package/: metakernel.tm
codex_pipeline/: __init__.py  calibration.py  dark.py  parameters.json  parameters.py  polarization.py  util.py
codex_pipeline/data/data/: omniheader.csv
docs/: conf.py  contribute.rst  faq.rst  help.rst  index.rst  intro.rst
docs/automation/: index.rst
docs/binder/: requirements.txt
docs/data/: access.rst  data_anomalies.rst  data_codes.rst  data_object.rst  data_overview.rst  data_versions.rst  index.rst  metadata.rst
docs/pipeline/: design.rst  index.rst  overview.rst
docs/pipeline/level1/: index.rst  pointing.rst
docs/pipeline/level2/: index.rst  polarization.rst
examples/: GALLERY_HEADER.rst
